--- a/public/DelayRepayChecker.html
+++ b/public/DelayRepayChecker.html
@@ -329,6 +329,13 @@
         </div>
 
     </main>
+	
+    <footer class="mt-10 py-6 text-center text-xs text-gray-400 border-t border-gray-200 bg-gray-50">
+        <div class="max-w-7xl mx-auto px-4">
+            <p class="mb-1">Contains National Rail data © 2025. Source: Rail Delivery Group.</p>
+            <p>This application is not affiliated with National Rail.</p>
+        </div>
+    </footer>
 
     <!-- Load Config first -->
     <script src="config.js"></script>
