--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
             <span class="font-extrabold text-2xl tracking-tight text-slate-900">RefundMyRail</span>
         </div>
         <div class="flex items-center gap-6">
-            <a href="/app" class="hidden sm:block text-sm font-semibold text-slate-600 hover:text-emerald-600 transition-colors">Sign In</a>
+            <a href="/manage" class="hidden sm:block text-sm font-semibold text-slate-600 hover:text-emerald-600 transition-colors">Manage Alerts</a>
             <a href="/app" class="inline-flex items-center justify-center px-6 py-3 text-sm font-bold rounded-xl text-white bg-emerald-600 hover:bg-emerald-500 transition-all shadow-lg shadow-emerald-200 hover:shadow-emerald-300 transform hover:-translate-y-0.5">
                 Launch App
             </a>
@@ -154,6 +154,9 @@
             <div class="flex items-center gap-2 opacity-50">
                 <img src="train_icon.png" alt="Logo" class="h-6 w-6 grayscale">
                 <span class="font-bold text-slate-900">RefundMyRail</span>
+            </div>
+            <div class="flex items-center gap-6">
+                 <a href="/manage" class="text-sm font-semibold text-slate-500 hover:text-emerald-600 transition-colors">Manage Alerts</a>
             </div>
             <p class="text-slate-400 text-sm text-center md:text-right">
                 &copy; 2025 RefundMyRail.<br>
