feat: Create initial public landing page with navigation, hero section, and interactive refund estimator.

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RefundMyRail - Automated Delay Repay</title>
+    <title>RefundMyRail - Automated Delay Notifications</title>
     <meta name="description"
-        content="Don't let train delays cost you. Automated tracking and compensation calculation for UK commuters.">
+        content="Don't let train delays cost you. Automated delay notifications and compensation calculator for UK commuters.">
     <link rel="icon" type="image/png" href="train_icon.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -119,7 +119,7 @@
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7">
                             </path>
                         </svg>
-                        Automated Claims
+                        Automated Delay Notifications
                     </div>
                     <div class="flex items-center gap-2">
                         <svg class="w-5 h-5 text-emerald-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
