feat: Implement core public UI with authentication, landing page, refund estimator, and initial app pages.

--- a/public/Dashboard.html
+++ b/public/Dashboard.html
@@ -269,7 +269,7 @@
                     <a href="/app"
                         class="text-sm font-bold text-slate-600 hover:text-emerald-600 transition-colors">Dashboard</a>
                     <a href="/manage"
-                        class="hidden sm:block text-sm font-bold text-slate-600 hover:text-emerald-600 transition-colors">Alerts</a>
+                        class="hidden sm:block text-sm font-bold text-slate-600 hover:text-emerald-600 transition-colors">Settings</a>
                 </div>
                 <button id="settings-toggle-button" class="p-2 rounded-lg hover:bg-slate-100 transition-colors" title="Settings">
                     <svg class="w-5 h-5 text-slate-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
