--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
                     <a href="/app"
                         class="text-sm font-bold text-slate-600 hover:text-emerald-600 transition-colors">Dashboard</a>
                     <a href="/manage"
-                        class="hidden sm:block text-sm font-bold text-slate-600 hover:text-emerald-600 transition-colors">Alerts</a>
+                        class="hidden sm:block text-sm font-bold text-slate-600 hover:text-emerald-600 transition-colors">Settings</a>
                 </div>
                 <div id="user-menu">
                     <!-- Populated by auth-ui.js -->
