feat: Introduce Dashboard, subscription management, and landing pages, documenting new features and UI/UX enhancements.

--- a/public/Dashboard.html
+++ b/public/Dashboard.html
@@ -271,16 +271,7 @@
                     <a href="/manage"
                         class="hidden sm:block text-sm font-bold text-slate-600 hover:text-emerald-600 transition-colors">Settings</a>
                 </div>
-                <button id="settings-toggle-button" class="p-2 rounded-lg hover:bg-slate-100 transition-colors"
-                    title="Settings">
-                    <svg class="w-5 h-5 text-slate-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z">
-                        </path>
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
-                    </svg>
-                </button>
+
                 <div id="user-menu">
                     <!-- Populated by auth-ui.js -->
                     <a href="/login"
@@ -462,13 +453,13 @@
                         <div class="col-span-2 flex justify-between items-center"><span
                                 class="text-sm font-bold text-slate-900">Morning Commute</span></div>
                         <div><label
-                                class="block text-[10px] text-slate-400 uppercase tracking-wider mb-2 font-bold">Depart
-                                After</label><input type="time" id="from-time-outbound" value="07:00"
+                                class="block text-[10px] text-slate-400 uppercase tracking-wider mb-2 font-bold">From</label><input
+                                type="time" id="from-time-outbound" value="07:00"
                                 class="w-full rounded-xl border-slate-200 text-sm py-3 font-semibold text-slate-700 focus:border-emerald-500 focus:ring-emerald-500">
                         </div>
                         <div><label
-                                class="block text-[10px] text-slate-400 uppercase tracking-wider mb-2 font-bold">Depart
-                                Before</label><input type="time" id="to-time-outbound" value="07:30"
+                                class="block text-[10px] text-slate-400 uppercase tracking-wider mb-2 font-bold">To</label><input
+                                type="time" id="to-time-outbound" value="07:30"
                                 class="w-full rounded-xl border-slate-200 text-sm py-3 font-semibold text-slate-700 focus:border-emerald-500 focus:ring-emerald-500">
                         </div>
                     </div>
@@ -477,13 +468,13 @@
                         <div class="col-span-2 flex justify-between items-center mt-2"><span
                                 class="text-sm font-bold text-slate-900">Evening Commute</span></div>
                         <div><label
-                                class="block text-[10px] text-slate-400 uppercase tracking-wider mb-2 font-bold">Depart
-                                After</label><input type="time" id="from-time-inbound" value="17:00"
+                                class="block text-[10px] text-slate-400 uppercase tracking-wider mb-2 font-bold">From</label><input
+                                type="time" id="from-time-inbound" value="17:00"
                                 class="w-full rounded-xl border-slate-200 text-sm py-3 font-semibold text-slate-700 focus:border-emerald-500 focus:ring-emerald-500">
                         </div>
                         <div><label
-                                class="block text-[10px] text-slate-400 uppercase tracking-wider mb-2 font-bold">Depart
-                                Before</label><input type="time" id="to-time-inbound" value="17:30"
+                                class="block text-[10px] text-slate-400 uppercase tracking-wider mb-2 font-bold">To</label><input
+                                type="time" id="to-time-inbound" value="17:30"
                                 class="w-full rounded-xl border-slate-200 text-sm py-3 font-semibold text-slate-700 focus:border-emerald-500 focus:ring-emerald-500">
                         </div>
                     </div>
@@ -773,10 +764,18 @@
             updateWeekLabel();
             loadSettings();
 
-            els.settingsToggle.addEventListener('click', () => toggleSettings(true));
-            els.settingsClose.addEventListener('click', () => toggleSettings(false));
-            els.settingsOverlay.addEventListener('click', () => toggleSettings(false));
-            els.settingsSave.addEventListener('click', saveSettings);
+            if (els.settingsToggle) {
+                els.settingsToggle.addEventListener('click', () => toggleSettings(true));
+            }
+            if (els.settingsClose) {
+                els.settingsClose.addEventListener('click', () => toggleSettings(false));
+            }
+            if (els.settingsOverlay) {
+                els.settingsOverlay.addEventListener('click', () => toggleSettings(false));
+            }
+            if (els.settingsSave) {
+                els.settingsSave.addEventListener('click', saveSettings);
+            }
             els.form.addEventListener('submit', handleSearch);
             els.datePicker.addEventListener('change', updateWeekLabel);
             els.searchTypeRadios.forEach(r => {
